@@ -2399,345 +2399,6 @@ name|out
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Parses a combined family and qualifier and adds either both or just the    * family in case there is not qualifier. This assumes the older colon    * divided notation, e.g. "data:contents" or "meta:".    *<p>    * Note: It will through an error when the colon is missing.    *    * @param familyAndQualifier family and qualifier    * @return A reference to this instance.    * @throws IllegalArgumentException When the colon is missing.    * @deprecated use {@link #addColumn(byte[], byte[])} instead    */
-specifier|public
-name|Scan
-name|addColumn
-parameter_list|(
-name|byte
-index|[]
-name|familyAndQualifier
-parameter_list|)
-block|{
-name|byte
-index|[]
-index|[]
-name|fq
-init|=
-name|KeyValue
-operator|.
-name|parseColumn
-argument_list|(
-name|familyAndQualifier
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|fq
-operator|.
-name|length
-operator|>
-literal|1
-operator|&&
-name|fq
-index|[
-literal|1
-index|]
-operator|!=
-literal|null
-operator|&&
-name|fq
-index|[
-literal|1
-index|]
-operator|.
-name|length
-operator|>
-literal|0
-condition|)
-block|{
-name|addColumn
-argument_list|(
-name|fq
-index|[
-literal|0
-index|]
-argument_list|,
-name|fq
-index|[
-literal|1
-index|]
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|addFamily
-argument_list|(
-name|fq
-index|[
-literal|0
-index|]
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|this
-return|;
-block|}
-comment|/**    * Adds an array of columns specified using old format, family:qualifier.    *<p>    * Overrides previous calls to addFamily for any families in the input.    *    * @param columns array of columns, formatted as<pre>family:qualifier</pre>    * @deprecated issue multiple {@link #addColumn(byte[], byte[])} instead    * @return this    */
-specifier|public
-name|Scan
-name|addColumns
-parameter_list|(
-name|byte
-index|[]
-index|[]
-name|columns
-parameter_list|)
-block|{
-for|for
-control|(
-name|byte
-index|[]
-name|column
-range|:
-name|columns
-control|)
-block|{
-name|addColumn
-argument_list|(
-name|column
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|this
-return|;
-block|}
-comment|/**    * Convenience method to help parse old style (or rather user entry on the    * command line) column definitions, e.g. "data:contents mime:". The columns    * must be space delimited and always have a colon (":") to denote family    * and qualifier.    *    * @param columns  The columns to parse.    * @return A reference to this instance.    * @deprecated use {@link #addColumn(byte[], byte[])} instead    */
-specifier|public
-name|Scan
-name|addColumns
-parameter_list|(
-name|String
-name|columns
-parameter_list|)
-block|{
-name|String
-index|[]
-name|cols
-init|=
-name|columns
-operator|.
-name|split
-argument_list|(
-literal|" "
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|String
-name|col
-range|:
-name|cols
-control|)
-block|{
-name|addColumn
-argument_list|(
-name|Bytes
-operator|.
-name|toBytes
-argument_list|(
-name|col
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|this
-return|;
-block|}
-comment|/**    * Helps to convert the binary column families and qualifiers to a text    * representation, e.g. "data:mimetype data:contents meta:". Binary values    * are properly encoded using {@link Bytes#toBytesBinary(String)}.    *    * @return The columns in an old style string format.    * @deprecated    */
-specifier|public
-name|String
-name|getInputColumns
-parameter_list|()
-block|{
-name|StringBuilder
-name|cols
-init|=
-operator|new
-name|StringBuilder
-argument_list|(
-literal|""
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|Map
-operator|.
-name|Entry
-argument_list|<
-name|byte
-index|[]
-argument_list|,
-name|NavigableSet
-argument_list|<
-name|byte
-index|[]
-argument_list|>
-argument_list|>
-name|e
-range|:
-name|familyMap
-operator|.
-name|entrySet
-argument_list|()
-control|)
-block|{
-name|byte
-index|[]
-name|fam
-init|=
-name|e
-operator|.
-name|getKey
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|cols
-operator|.
-name|length
-argument_list|()
-operator|>
-literal|0
-condition|)
-name|cols
-operator|.
-name|append
-argument_list|(
-literal|" "
-argument_list|)
-expr_stmt|;
-name|NavigableSet
-argument_list|<
-name|byte
-index|[]
-argument_list|>
-name|quals
-init|=
-name|e
-operator|.
-name|getValue
-argument_list|()
-decl_stmt|;
-comment|// check if this family has qualifiers
-if|if
-condition|(
-name|quals
-operator|!=
-literal|null
-operator|&&
-name|quals
-operator|.
-name|size
-argument_list|()
-operator|>
-literal|0
-condition|)
-block|{
-name|StringBuilder
-name|cs
-init|=
-operator|new
-name|StringBuilder
-argument_list|(
-literal|""
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|byte
-index|[]
-name|qual
-range|:
-name|quals
-control|)
-block|{
-if|if
-condition|(
-name|cs
-operator|.
-name|length
-argument_list|()
-operator|>
-literal|0
-condition|)
-name|cs
-operator|.
-name|append
-argument_list|(
-literal|" "
-argument_list|)
-expr_stmt|;
-comment|// encode values to make parsing easier later
-name|cs
-operator|.
-name|append
-argument_list|(
-name|Bytes
-operator|.
-name|toStringBinary
-argument_list|(
-name|fam
-argument_list|)
-argument_list|)
-operator|.
-name|append
-argument_list|(
-literal|":"
-argument_list|)
-operator|.
-name|append
-argument_list|(
-name|Bytes
-operator|.
-name|toStringBinary
-argument_list|(
-name|qual
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-name|cols
-operator|.
-name|append
-argument_list|(
-name|cs
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-comment|// only add the family but with old style delimiter
-name|cols
-operator|.
-name|append
-argument_list|(
-name|Bytes
-operator|.
-name|toStringBinary
-argument_list|(
-name|fam
-argument_list|)
-argument_list|)
-operator|.
-name|append
-argument_list|(
-literal|":"
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-return|return
-name|cols
-operator|.
-name|toString
-argument_list|()
-return|;
-block|}
 comment|/**    * Enable/disable "raw" mode for this scan.    * If "raw" is enabled the scan will return all    * delete marker and deleted rows that have not    * been collected, yet.    * This is mostly useful for Scan on column families    * that have KEEP_DELETED_ROWS enabled.    * It is an error to specify any column when "raw" is set.    * @param raw True/False to enable/disable "raw" mode.    */
 specifier|public
 name|void
