@@ -175,6 +175,22 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|mapreduce
+operator|.
+name|TableInputFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|util
 operator|.
 name|Bytes
@@ -314,10 +330,12 @@ argument_list|,
 name|endRow
 argument_list|)
 decl_stmt|;
-name|scan
+name|TableInputFormat
 operator|.
 name|addColumns
 argument_list|(
+name|scan
+argument_list|,
 name|trrInputColumns
 argument_list|)
 expr_stmt|;
@@ -385,10 +403,12 @@ argument_list|,
 name|endRow
 argument_list|)
 decl_stmt|;
-name|scan
+name|TableInputFormat
 operator|.
 name|addColumns
 argument_list|(
+name|scan
+argument_list|,
 name|trrInputColumns
 argument_list|)
 expr_stmt|;
@@ -434,14 +454,22 @@ argument_list|(
 name|firstRow
 argument_list|)
 decl_stmt|;
-name|scan
+name|TableInputFormat
 operator|.
 name|addColumns
 argument_list|(
+name|scan
+argument_list|,
 name|trrInputColumns
 argument_list|)
 expr_stmt|;
-comment|//      scan.setFilter(trrRowFilter);
+name|scan
+operator|.
+name|setFilter
+argument_list|(
+name|trrRowFilter
+argument_list|)
+expr_stmt|;
 name|this
 operator|.
 name|scanner
