@@ -93,6 +93,20 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|KeyValue
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|client
 operator|.
 name|HTable
@@ -418,10 +432,10 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|scan
-operator|.
 name|addColumns
 argument_list|(
+name|scan
+argument_list|,
 name|conf
 operator|.
 name|get
@@ -645,6 +659,166 @@ argument_list|(
 name|scan
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * Parses a combined family and qualifier and adds either both or just the    * family in case there is not qualifier. This assumes the older colon    * divided notation, e.g. "data:contents" or "meta:".    *<p>    * Note: It will through an error when the colon is missing.    *    * @param familyAndQualifier family and qualifier    * @return A reference to this instance.    * @throws IllegalArgumentException When the colon is missing.    */
+specifier|private
+specifier|static
+name|void
+name|addColumn
+parameter_list|(
+name|Scan
+name|scan
+parameter_list|,
+name|byte
+index|[]
+name|familyAndQualifier
+parameter_list|)
+block|{
+name|byte
+index|[]
+index|[]
+name|fq
+init|=
+name|KeyValue
+operator|.
+name|parseColumn
+argument_list|(
+name|familyAndQualifier
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|fq
+operator|.
+name|length
+operator|>
+literal|1
+operator|&&
+name|fq
+index|[
+literal|1
+index|]
+operator|!=
+literal|null
+operator|&&
+name|fq
+index|[
+literal|1
+index|]
+operator|.
+name|length
+operator|>
+literal|0
+condition|)
+block|{
+name|scan
+operator|.
+name|addColumn
+argument_list|(
+name|fq
+index|[
+literal|0
+index|]
+argument_list|,
+name|fq
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|scan
+operator|.
+name|addFamily
+argument_list|(
+name|fq
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|/**    * Adds an array of columns specified using old format, family:qualifier.    *<p>    * Overrides previous calls to addFamily for any families in the input.    *    * @param columns array of columns, formatted as<pre>family:qualifier</pre>    * @return this    */
+specifier|public
+specifier|static
+name|void
+name|addColumns
+parameter_list|(
+name|Scan
+name|scan
+parameter_list|,
+name|byte
+index|[]
+index|[]
+name|columns
+parameter_list|)
+block|{
+for|for
+control|(
+name|byte
+index|[]
+name|column
+range|:
+name|columns
+control|)
+block|{
+name|addColumn
+argument_list|(
+name|scan
+argument_list|,
+name|column
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|/**    * Convenience method to help parse old style (or rather user entry on the    * command line) column definitions, e.g. "data:contents mime:". The columns    * must be space delimited and always have a colon (":") to denote family    * and qualifier.    *    * @param columns  The columns to parse.    * @return A reference to this instance.    */
+specifier|private
+specifier|static
+name|void
+name|addColumns
+parameter_list|(
+name|Scan
+name|scan
+parameter_list|,
+name|String
+name|columns
+parameter_list|)
+block|{
+name|String
+index|[]
+name|cols
+init|=
+name|columns
+operator|.
+name|split
+argument_list|(
+literal|" "
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|String
+name|col
+range|:
+name|cols
+control|)
+block|{
+name|addColumn
+argument_list|(
+name|scan
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|col
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
