@@ -235,6 +235,22 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|mapreduce
+operator|.
+name|TableInputFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|util
 operator|.
 name|Bytes
@@ -1116,10 +1132,12 @@ operator|new
 name|Scan
 argument_list|()
 decl_stmt|;
-name|scan
+name|TableInputFormat
 operator|.
 name|addColumns
 argument_list|(
+name|scan
+argument_list|,
 name|columns
 argument_list|)
 expr_stmt|;
